# google-cloud-mcp

./: .env.example  .gitignore  Dockerfile  GUIDE.md  MCP_CLIENTS.md  README.md  docker-compose.yml  main.py  pyproject.toml  server.py
.github/rulesets/: protect-main.json  protect-release-tags.json
.github/workflows/: tests.yml
google_cloud_mcp/: server.py
tests/: conftest.py  test_account.py  test_calendar.py  test_docs.py  test_drive.py  test_gmail.py  test_sheets_core.py  test_sheets_extra.py  test_slides.py
