[project]
name = "google-cloud-mcp"
version = "2.1.0"
description = "MCP server for Google Calendar, Gmail, and Drive integration"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Hoang Tan", email = "pubpug@metoolzy.com"}]
keywords = ["mcp", "google", "calendar", "gmail", "drive", "ai", "fastmcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=2.14.5",
    "google-api-python-client>=2.189.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.4",
    "python-dotenv>=1.0.0",
]

[project.scripts]
google-cloud-mcp = "google_cloud_mcp:main"

[project.urls]
Homepage = "https://github.com/tannht/google-cloud-mcp"
Repository = "https://github.com/tannht/google-cloud-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
