[project]
name = "gg-mcp"
version = "2.1.0"
description = "MCP server for Google Calendar, Gmail, and Drive integration"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Hoang Tan", email = "pubpug@metoolzy.com"}]
keywords = ["mcp", "google", "calendar", "gmail", "drive", "ai", "fastmcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastmcp>=2.14.5",
    "google-api-python-client>=2.189.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.4",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
]

[project.scripts]
gg-mcp = "google_cloud_mcp:main"

[project.urls]
Homepage = "https://github.com/tannht/google-cloud-mcp"
Repository = "https://github.com/tannht/google-cloud-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["google_cloud_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]
